# infra-mcp

./: .env.example  .gitignore  .lla-embeddings.json  .lla-profile.json  README.md  pyproject.toml
server/: config.py  main.py
server/tools/: ops.py  ssh.py
tests/: test_ops.py
