[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "infra-mcp"
version = "0.1.0"
description = "MCP server that wraps Docker / Caddy / GitHub Actions ops on a remote VPS. Lets Claude Code take read-then-write-with-confirmation infra actions over SSH, with a service allowlist and audit-trail tagging."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Danh Le", email = "dtle82@gmail.com" }]
keywords = ["mcp", "model-context-protocol", "claude", "anthropic", "devops", "docker", "ssh"]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "ruff>=0.5"]

[project.scripts]
infra-mcp = "server.main:main"

[project.urls]
Homepage = "https://github.com/odanree/infra-mcp"
Repository = "https://github.com/odanree/infra-mcp"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
